--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
 
             - name: Style
               run: test -z $(go fmt ./...)
+            
     style:
         name: Style
         runs-on: ubuntu-latest
@@ -37,3 +38,5 @@ jobs:
                   go-version: "1.23.0"
             - name: Check Style
               run: test -z $(go fmt ./...)
+            - name: Install staticcheck
+              run: go install honnef.co/go/tools/cmd/staticcheck@latest
