--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,4 +19,4 @@ jobs:
                   go-version: "1.23.0"
 
             - name: Deploy to production
-              run: scripts/buildprod.sh
+              run: ./scripts/buildprod.sh
